# docstr-health

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TODO.md  config.toml  pyproject.toml
docstr_health/: config.toml  main.py
docstr_health/checkers/: base.py  docstring.py  project.py
docstr_health/cli/: cli.py  parser.py  progress_bar.py
docstr_health/core/: config.py  decorators.py  enums.py  exceptions.py  interfaces.py  logger.py  settings.py
docstr_health/models/: function.py  module.py  report.py
docstr_health/sources/: __init__.py  git_repo.py  local.py  pypi_package.py
src/: checkers.py  main.py  models.py
src/checkers/: base.py  docstring.py  project.py  typecheck.py
src/cli/: cli.py  parser.py
src/core/: __init__.py  config.py  decorators.py  enums.py  exceptions.py  logger.py  settings.py
src/models/: class.py  function.py  module.py  report.py
src/sources/: __init__.py  base.py  git_repo.py  local.py  pypi_package.py
tests/: conftest.py  test_cli.py  test_cli_table.py  test_docstring_length_metrics.py  test_version.py
