[project]
name = "docstr-health"
version = "0.1.2"
description = "Health score and visualization for Python projects"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"

authors = [
    { name = "Mihail Sergeenko" },
]
maintainers = [
    { name = "Mihail Sergeenko" },
]

keywords = [
    "docstring", "documentation", "code-quality", "pep257",
    "linter", "cli", "analysis", "coverage",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "typing"},
    {include-group = "lint"},
]

lint = [
    "ruff>=0.15.1",
]

typing = [
    "mypy>=1.19.1",
    "argcomplete>=3.6.3",
]

test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-codspeed>=4.3.0",
    "pytest-benchmark>=5.2.3",
]

profiling = [
    "scalene>=2.3.0",
    "snakeviz>=2.2.2",
]

[project.scripts]
docstr-health = "docstr_health.main:main"   

[project.urls]
Homepage = "https://github.com/PurpleSwtr/docstr-health"
Repository = "https://github.com/PurpleSwtr/docstr-health.git"
Documentation = "https://github.com/PurpleSwtr/docstr-health#readme"
Issues = "https://github.com/PurpleSwtr/docstr-health/issues"
Changelog = "https://github.com/PurpleSwtr/docstr-health/blob/main/CHANGELOG.md"


[build-system]
requires = ["uv_build >= 0.11.23, <0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-root = ""
source-include = ["docstr_health/config.toml"]
source-exclude = [
    "benchmarks/",
    "storybook/",
    "views/",
    "docs/",
    ".ruff_cache/",
    ".mypy_cache/",
    "venv/",
    ".venv/",
]

[tool.docstr-health]
debug = false
